# matrix

./: ABANDONED.md  Cargo.toml  README.md
src/: consts.rs  error.rs  fmt.rs  index.rs  iter.rs  layout.rs  lib.rs  macros.rs  marker.rs  matrix.rs  shape.rs  vector.rs
src/matrix/: arithmetic.rs  constructor.rs  conversion.rs  default.rs  dimension.rs  fmt.rs  index.rs  internal.rs  iter.rs  method.rs  operation.rs  order.rs  property.rs  shape.rs
src/matrix/arithmetic/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/matrix/iter/: count.rs  major_axis.rs  minor_axis.rs
src/matrix/operation/: arithmetic.rs  elementwise.rs  multiplication_like.rs  scalar.rs
src/matrix/operation/arithmetic/: add.rs  div.rs  mul.rs  sub.rs
src/matrix/ops/: index.rs
src/vector/: conversion.rs  fmt.rs  kind.rs
