[package]
name = "matreex"
version = "0.7.3"
edition = "2021"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["data-structures"]
description = "A simple matrix implementation."
repository = "https://github.com/Lingxuan-Ye/matreex"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {version = "1.10.0", optional = true}

[features]
default = []
rayon = ["dep:rayon"]
